package mediator;

public interface SmartMediator {
    void notify(Device device, String event);
}
